--- a/Resturaunt_web/Resturaunt_web.csproj
+++ b/Resturaunt_web/Resturaunt_web.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Views\Menus\Menu.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Views\Menus\Menu.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="5.0.16" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.16" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="5.0.16" />
