New Sql Db added

--- a/Resturaunt_web/appsettings.json
+++ b/Resturaunt_web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Resturaunt_web-5FC66A80-BE30-4304-B89D-62E966931DCB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=tcp:dynamic.database.windows.net,1433;Initial Catalog=DynamicRestaurant;Persist Security Info=False;User ID=Azureis03@techtorium.ac.nz;Password=Hc%M,D%68pg!i-2;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Authentication=Active Directory Password;"
   },
   "Logging": {
     "LogLevel": {
